bugfixes: 1. From time to time after refresh page scrollbars: white or grey. In day mode should have grey semi-transparent scrollbar, in night mode should have white semi-transparent scrollbar. 2. Open chat - first message will load - when after moment other messages and padding from right scrollbar will be added. 3. In chat: click on user avatar - popup with info will show up. There's unbeuty white scrollbar.

--- a/src/Components/ColumnLeft/DialogsList.css
+++ b/src/Components/ColumnLeft/DialogsList.css
@@ -6,9 +6,8 @@
  */
 
 .dialogs-list {
-    overflow-y: auto;
+    overflow: hidden;
     -webkit-overflow-scrolling: touch;
-    overflow-x: hidden;
     height: 100%;
     transform: translateZ(0);
     position: absolute;
